# vst3_plugin_cookiecutter

./: README.md  cookiecutter.json
extensions/: uuid_extension.py
hooks/: post_gen_project.py
{{cookiecutter.PLUGIN_NAME_CLI}}/: CMakeLists.txt
{{cookiecutter.PLUGIN_NAME_CLI}}/resource/: Info.plist  {{cookiecutter.PREFIX_FOR_FILENAMES_CLI}}editor.uidesc
{{cookiecutter.PLUGIN_NAME_CLI}}/source/: version.h  {{cookiecutter.PREFIX_FOR_FILENAMES_CLI}}cids.h  {{cookiecutter.PREFIX_FOR_FILENAMES_CLI}}controller.cpp  {{cookiecutter.PREFIX_FOR_FILENAMES_CLI}}controller.h  {{cookiecutter.PREFIX_FOR_FILENAMES_CLI}}entry.cpp  {{cookiecutter.PREFIX_FOR_FILENAMES_CLI}}processor.cpp  {{cookiecutter.PREFIX_FOR_FILENAMES_CLI}}processor.h
